2013-01-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (html-create-alert-form, html-edit-alert-form): Use a
	drop-down list for syslog and SNMP.
	(html-edit-alert-form): Fix class values for certain table rows.

	* src/gsad_omp.c (create_alert_omp, edit_alert_omp): Remove the syslog
	special case.

2013-01-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (cve-details, cpe-details, ovaldef-details): Get
	filter from envelope now that manager stips it out.

2013-01-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Add Alert event, condition, method and filter editing support.

	* src/gsad_omp.c (send_alert_method_data): Check for notice name too
	when sending method data.
	(edit_alert): Get report filters and report formats too.
	(save_alert): Send event, condition, method and filter too.
	(test_alert): Fix error message links.

	* src/html/omp.xsl (radio-button, modify_alert_repsonse): New template.
	(html-edit-alert-form): Add event, method, data and filter editing
	fields.
	(edit_alert): Send get_report_formats_response and get_filters_response
	as parameters to html-edit-alert-form.
	(get_alert, get_alerts): Apply modify_alert_response.

2013-01-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* ChangeLog: Clean up entry.

2013-01-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (edit-header-icons): New template.
	(html-edit-lsc-credential-form, html-edit-agent-form)
	(html-edit-alert-form, html-edit-filter-form, html-edit-target-form)
	(html-config-table, html-edit-schedule-form, html-edit-slave-form)
	(html-edit-note-form, html-edit-override-form)
	(html-edit-report-format-form): Use edit-header-icons template.
	(edit_my_settings): Add header button to my settings.

2013-01-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Check alert data for matching event/condition/method before sending it
	which reduces bloat in DB.
